trying to fix modal img spacing

--- a/style.css
+++ b/style.css
@@ -64,13 +64,15 @@
   margin: 0;
   position: absolute;
   left: 800px;
+  top: 300px;
   bottom: 250px;
-  height: 50px;
+  height: 250px;
   width: 250px;
   font-size: 150%;
   color: red;
   background-color: darkgrey;
   text-align: center;
+  border-radius: 50%;
 }
 
 #home button.start:hover {  
@@ -410,6 +412,9 @@
   max-height: 100%;
   height: 380px;
   margin: auto;
+  width: 100%;
+  padding: 0 20%;
+  display: inline-flex;
 }
 
 .modal-dialog{
@@ -471,6 +476,10 @@
   top: 500px;
 }
 
+#win button {
+  border-radius: 10px;
+}
+
 #win button a:hover{
   text-decoration: none;
 }
@@ -499,6 +508,7 @@
   color: #fff;
   position: relative;
   left: 80%;
+  border-radius: 10px;
 }
 
 #about button:hover {
